2003-07-12  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/Plugins.py (PluginDialog.build_tree): Remove reverse() call.
	* doc/gramps-manual/C/gramps-manual.xml: More corrections.

2003-07-11  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/IndivSummary.py (IndivSummary.__init__):
	Provide default value of 0 to newpage argument. 
	* doc/gramps-manual/C/gramps-manual.xml: More corrections.

2003-07-11  Donald Peterson  <dpeterson@sigmaxi.org>
	* src/docgen/LaTeXDoc.py: Added UNICODE support and '&' handling

2003-07-11  Tim Waugh  <twaugh@redhat.com>
	* src/plugins/SimpleBookTitle.py: Define self.style_name before
        calling Report.BareReportDialog.__init__().

2003-07-10  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GrampsCfg.py (GrampsPreferences.select): Conditional get_path(). 
	* src/Plugins.py (PluginDialog.on_node_selected): Likewise.
	* src/plugins/BookReport.py (BookReportDialog.__init__): Do not 
	initialize book to the empty book (was losing selected style info).
	* src/plugins/FtmStyleDescendants.py (FtmDescendantReport.__init__): 
	Call setup() to obtain complete style information.
	* src/plugins/IndivComplete.py (IndivComplete.__init__): Likewise.
	* src/plugins/IndivSummary.py (IndivSummary.__init__): Likewise.
	* src/Report.py (BareReportDialog.build_style_menu): 
	Initialize menu to self.style_name;
	(ReportDialog.__init__): Set self.style_name to "default" 
	for standalone reports. 
	* src/plugins/DetDescendantReport.py: Define self.style_name before 
	calling Report.BareReportDialog.__init__().
	* src/plugins/AncestorReport.py: Likewise. 
	* src/plugins/Ancestors.py: Likewise. 
	* src/plugins/DescendReport.py: Likewise. 
	* src/plugins/FtmStyleAncestors.py: Likewise. 
	* src/plugins/FtmStyleDescendants.py: Likewise. 
	* src/plugins/IndivComplete.py: Likewise. 
	* src/plugins/IndivSummary.py: Likewise. 
	* src/plugins/FamilyGroup.py: Likewise. 
	* src/plugins/DetAncestralReport.py: Likewise. 